--- a/zajiceka/exercises/06.ipynb
+++ b/zajiceka/exercises/06.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from rdkit.Chem import AllChem as Chem\n",
     "from rdkit.Chem import MACCSkeys\n",
-    "# import modin.pandas as pd"
+    "import pandas as pd"
    ]
   },
   {
